Added more flexibility to the mod config menu